--- a/#src/index.html
+++ b/#src/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/style.min.css">
-		<title>Gulp</title>
-	</head>
-	<body>
+<html lang="ru">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	@@include('_links.html')
+	<title>Gulp</title>
+</head>
+
+<body>
+	<div class="wrapper">
 		@@include('_header.html')
-		<main class="main">
+
+		<main class="main wrapper__content">
 
 		</main>
-		<script src="js/script.min.js"></script>
-	</body>
+
+		@@include('_footer.html')
+	</div>
+
+	@@include('_scripts.html')
+</body>
+
 </html>
