Header desktop completed

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -35,9 +35,9 @@
 				<div class="header__basket-total">1</div>
 			</a>
 			<div class="header__menu header__menu--active">
-				<button class="header__menu-btn">Авторизация</button>
-				<div class="header__menu-text">Ещё не зарегистрированны?</div>
-				<!-- <div class="header__menu-dropdown">
+				<!-- <button class="header__menu-btn">Авторизация</button>
+				<div class="header__menu-text">Ещё не зарегистрированны?</div> -->
+				<div class="header__menu-dropdown">
 					<div class="header__menu-title">Аккаунт</div>
 					<ul class="header__menu-list">
 						<li class="header__menu-item header__menu-item--active"><a href="#" class="header__menu-link">Мой профиль</a></li>
@@ -48,9 +48,10 @@
 					</ul>
 				</div>
 				<a class="header__menu-user" href="profile.html">
-					<img class="header__menu-avatar" src="img/header-user.png" alt="Аватар пользователя">
-				</a> -->
+					<img class="header__menu-avatar" src="img/profile-test.jpg" alt="Аватар пользователя">
+				</a>
 			</div>
 		</div>
 	</div>
 </header>
+
