--- a/#src/index.html
+++ b/#src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	@@include('_links.html')
+	<meta name="description" content="Сладости - один из лучших магазинов в Беларуси по продаже товаров">
 	<title>Gulp</title>
 </head>
 
@@ -13,6 +14,179 @@
 		@@include('_header.html')
 
 		<main class="main wrapper__content">
+
+			<div class="hero">
+				<div class="container">
+					<div class="hero__inner">
+						<aside class="hero__sidebar">
+							<div class="hero__sidebar-inner">
+
+								<div class="hero__sidebar-top">
+									<div class="hero__sidebar-title">Категории</div>
+									<ul class="hero__sidebar-list">
+										<li class="hero__sidebar-item">
+											<a class="hero__link" href="#">
+												<div class="hero__link-image"
+													style="background-image: url(../img/icons/icons.svg#drinks);"></div>
+												<span class="hero__link-title">Напитки</span>
+												Сады придонья, кола, липтон
+											</a>
+										</li>
+										<li class="hero__sidebar-item">
+											<a class="hero__link" href="#">
+												<div class="hero__link-image"
+													style="background-image: url(../img/icons/icons.svg#sweets);"></div>
+												<span class="hero__link-title">Сладости</span>
+												Вафли, шоколад, маршмелоу
+											</a>
+										</li>
+										<li class="hero__sidebar-item">
+											<a class="hero__link" href="#">
+												<div class="hero__link-image"
+													style="background-image: url(../img/icons/icons.svg#chips);"></div>
+												<span class="hero__link-title">Чипсы и лапша</span>
+												Чипсы, лапша
+											</a>
+										</li>
+										<li class="hero__sidebar-item">
+											<a class="hero__link" href="#">
+												<div class="hero__link-image"
+													style="background-image: url(../img/icons/icons.svg#gift-boxes);"></div>
+												<span class="hero__link-title">Подарочные боксы</span>
+												Можно упаковать подарок
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="hero__sidebar-bottom">
+									<div class="hero__sidebar-heading">Запрос оптового прайса</div>
+									<div class="hero__sidebar-social">
+										<a class="hero__sidebar-soclink" href="#">
+											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
+												<use xlink:href="img/icons/icons.svg#instagram"></use>
+											</svg>
+										</a>
+										<a class="hero__sidebar-soclink" href="#">
+											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
+												<use xlink:href="img/icons/icons.svg#telegram"></use>
+											</svg>
+										</a>
+										<a class="hero__sidebar-soclink" href="#">
+											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
+												<use xlink:href="img/icons/icons.svg#viber"></use>
+											</svg>
+										</a>
+										<a class="hero__sidebar-soclink" href="#">
+											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
+												<use xlink:href="img/icons/icons.svg#whatsapp"></use>
+											</svg>
+										</a>
+									</div>
+									<a class="hero__sidebar-phone" href="#">
+										+ 7 (955) 358-26-54
+									</a>
+								</div>
+
+
+							</div>
+						</aside>
+
+						<div class="hero__content">
+							<div class="hero__slider">
+								<div class="hero__slider-item" style="background-image: url(img/hero/hero-banner-1.jpg);">
+									<div class="hero__slider-box">
+										<div class="hero__title">Освежающие напитки</div>
+										<div class="hero__subtitle">Dr. Pepper, чай Lipton, Coca cola, Сады придонья, Chupa chups
+											и др.</div>
+										<a class="hero__btn" href="#">УЗНАТЬ ПОДРОБНЕЕ</a>
+									</div>
+								</div>
+								<div class="hero__slider-item" style="background-image: url(img/hero/hero-banner-1.jpg);">
+									<div class="hero__slider-box">
+										<div class="hero__title">Освежающие напитки 2</div>
+										<div class="hero__subtitle">Dr. Pepper, чай Lipton, Coca cola, Сады придонья, Chupa chups
+											и
+											др.</div>
+										<a class="hero__btn" href="#">УЗНАТЬ ПОДРОБНЕЕ</a>
+									</div>
+								</div>
+								<div class="hero__slider-item" style="background-image: url(img/hero/hero-banner-1.jpg);">
+									<div class="hero__slider-box">
+										<div class="hero__title">Освежающие напитки 3</div>
+										<div class="hero__subtitle">Dr. Pepper, чай Lipton, Coca cola, Сады придонья, Chupa chups
+											и
+											др.</div>
+										<a class="hero__btn" href="#">УЗНАТЬ ПОДРОБНЕЕ</a>
+									</div>
+								</div>
+								<div class="hero__slider-item" style="background-image: url(img/hero/hero-banner-1.jpg);">
+									<div class="hero__slider-box">
+										<div class="hero__title">Освежающие напитки 4</div>
+										<div class="hero__subtitle">Dr. Pepper, чай Lipton, Coca cola, Сады придонья, Chupa chups
+											и
+											др.</div>
+										<a class="hero__btn" href="#">УЗНАТЬ ПОДРОБНЕЕ</a>
+									</div>
+								</div>
+								<div class="hero__slider-item" style="background-image: url(img/hero/hero-banner-1.jpg);">
+									<div class="hero__slider-box">
+										<div class="hero__title">Освежающие напитки 5</div>
+										<div class="hero__subtitle">Dr. Pepper, чай Lipton, Coca cola, Сады придонья, Chupa chups
+											и
+											др.</div>
+										<a class="hero__btn" href="#">УЗНАТЬ ПОДРОБНЕЕ</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="sales-leaders">
+				<div class="container">
+					<div class="sales-leaders__inner">
+						<h3 class="sales-leaders__title title-medium">Лидеры продаж</h3>
+						<div class="sales-leaders__box">
+
+							<div class="sales-leaders__card">
+								<div class="sales-leaders__card-image">
+									<label class="sales-leaders__card-label">
+										<span class="sales-leaders__card-link">Перейти в избранное</span>
+										<input class="sales-leaders__card-input" type="checkbox">
+										<span class="sales-leaders__card-heart"></span>
+									</label>
+								</div>
+								<div class="sales-leaders__card-info">
+									<div class="sales-leaders__card-rating">
+										Потом звезды сверстаю
+									</div>
+									<div class="sales-leaders__card-name">Dr.Pepper “Cherry”</div>
+									<div class="sales-leaders__card-description">
+										Прохладительный напиток, безалкогольный
+									</div>
+									<div class="sales-leaders__card-price">45.00 руб.</div>
+								</div>
+								<div class="sales-leaders__card-btn">
+									<div class="sales-leaders__buy">Купить товар</div>
+									<div class="sales-leaders__quantity">
+										<label class="sales-leaders__quantity-label">
+											<span class="sales-leaders__quantity-text">Количество</span>
+											<input class="sales-leaders__quantity-input" type="text" placeholder="1">
+											<div class="sales-leaders__quantity-btn"></div>
+										</label>
+									</div>
+									<a class="sales-leaders__basket-link" href="#"></a>
+								</div>
+							</div>
+							
+						</div>
+					</div>
+				</div>
+			</div>
+
 
 		</main>
 
