--- a/goodies/img/stack/sprite.stack.html
+++ b/goodies/img/stack/sprite.stack.html
@@ -23,7 +23,7 @@ They might well be outsourced to an external stylesheet of course.
 	.svg-header-menu-triangle-dims { width: 36px; height: 31px; }
 	.svg-help-dims { width: 22px; height: 27px; }
 	.svg-instagram-dims { width: 35px; height: 35px; }
-	.svg-publications-dims { width: 26px; height: 27px; }
+	.svg-public-dims { width: 26px; height: 27px; }
 	.svg-search-header-dims { width: 21px; height: 21px; }
 	.svg-shopping-cart-dims { width: 52px; height: 52px; }
 	.svg-sweets-dims { width: 50px; height: 50px; }
@@ -115,14 +115,14 @@ selector is used to show the very shape that is referenced by the fragment ident
 					</div>
 					<h2>instagram</h2>
 				</li>
-				<li title="publications">
+				<li title="public">
 					<div class="icon-box">
 						
-						<!-- publications -->
-						<img src="../icons/icons.svg#publications" class="svg-publications-dims" alt="publications"/>
+						<!-- public -->
+						<img src="../icons/icons.svg#public" class="svg-public-dims" alt="public"/>
 						
 					</div>
-					<h2>publications</h2>
+					<h2>public</h2>
 				</li>
 				<li title="search-header">
 					<div class="icon-box">
@@ -195,7 +195,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Wed, 17 Jun 2020 09:01:40 GMT by <a href="https://github.com/jkphl/svg-sprite" target="_blank">svg-sprite</a>.</p>
+			<p>Generated at Thu, 18 Jun 2020 13:34:44 GMT by <a href="https://github.com/jkphl/svg-sprite" target="_blank">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
