--- a/#src/_links.html
+++ b/#src/_links.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="css/libs.min.css">
+<link rel="preload" href="css/style.min.css" as="style">
 <link rel="stylesheet" href="css/style.min.css">
