--- a/#src/_scripts.html
+++ b/#src/_scripts.html
@@ -1,3 +1,4 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- <script src="js/jquery-3.5.1.min.js"></script> -->
 <script src="js/libs.min.js"></script>
 <script src="js/script.min.js"></script>
