Desktop main page full

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,7 +1,81 @@
 <footer class="footer wrapper__footer">
 	<div class="container">
 		<div class="footer__inner">
-			
+
+			<div class="footer__col footer__col--first">
+				<span class="footer__title">Навигация</span>
+				<ul class="footer__list">
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Главная</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Публикации</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Корзина</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Контакты</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Партнёрская программа</a></li>
+				</ul>
+			</div>
+
+			<div class="footer__col footer__col--second">
+				<span class="footer__title">Продукция</span>
+				<ul class="footer__list">
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Бакалейные товары</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Напитки</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Подарочные боксы</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Сладости</a></li>
+				</ul>
+			</div>
+
+			<div class="footer__col footer__col--third">
+				<span class="footer__title">Помощь</span>
+				<ul class="footer__list">
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Доставка</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Способы оплаты</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link">Как оформить заказ</a></li>
+				</ul>
+			</div>
+
+			<div class="footer__col footer__col--fourth">
+				<span class="footer__title">Связаться с нами</span>
+				<div class="footer__social">
+					<a class="footer__social-link" href="#">
+						<svg class="footer__social-svg" viewBox="0 0 35 35">
+							<use xlink:href="img/icons/icons.svg#instagram"></use>
+						</svg>
+					</a>
+					<a class="footer__social-link" href="#">
+						<svg class="footer__social-svg" viewBox="0 0 35 35">
+							<use xlink:href="img/icons/icons.svg#telegram"></use>
+						</svg>
+					</a>
+					<a class="footer__social-link" href="#">
+						<svg class="footer__social-svg" viewBox="0 0 35 35">
+							<use xlink:href="img/icons/icons.svg#viber"></use>
+						</svg>
+					</a>
+					<a class="footer__social-link" href="#">
+						<svg class="footer__social-svg" viewBox="0 0 35 35">
+							<use xlink:href="img/icons/icons.svg#whatsapp"></use>
+						</svg>
+					</a>
+				</div>
+				<a class="footer__contact-link" href="mailto:supermarket@mail.ru">
+					<svg class="footer__contact-icon" viewBox="0 0 35 35">
+						<use xlink:href="img/icons/icons.svg#envelope"></use>
+					</svg>
+					<span class="footer__contact-text">supermarket@mail.ru</span>
+				</a>
+				<a class="footer__contact-link" href="mailto:+79553582654">
+					<svg class="footer__contact-icon" viewBox="0 0 35 35">
+						<use xlink:href="img/icons/icons.svg#phone-call"></use>
+					</svg>
+					<span class="footer__contact-text">+ 7 (955) 358-26-54</span>
+				</a>
+				<a class="footer__developer-link" href="https://lvan-dyadyura.ru/" target="_blank">
+					Разработчик - Иван Дядюра
+				</a>
+			</div>
+
+		</div>
+		<div class="footer__copy">
+			&copy;Copyright all rights reserved
 		</div>
 	</div>
 </footer>
