Almost completed mobile version of the home page

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -8,6 +8,7 @@
 					<li class="footer__list-item"><a href="#" class="footer__list-link">Главная</a></li>
 					<li class="footer__list-item"><a href="#" class="footer__list-link">Публикации</a></li>
 					<li class="footer__list-item"><a href="#" class="footer__list-link">Корзина</a></li>
+					<li class="footer__list-item"><a href="#" class="footer__list-link footer__list-link--underlined">Авторизация</a></li>
 					<li class="footer__list-item"><a href="#" class="footer__list-link">Контакты</a></li>
 					<li class="footer__list-item"><a href="#" class="footer__list-link">Партнёрская программа</a></li>
 				</ul>
