--- a/#src/_header.html
+++ b/#src/_header.html
@@ -51,6 +51,12 @@
 				<a class="header__menu-user" href="profile.html">
 					<img class="header__menu-avatar" src="img/profile-test.jpg" alt="Аватар пользователя">
 				</a>
+				<div class="header__close"></div>
+			</div>
+			<div class="header__burger">
+				<div class="header__burger-item"></div>
+				<div class="header__burger-item"></div>
+				<div class="header__burger-item"></div>
 			</div>
 		</div>
 	</div>
