--- a/#src/index.html
+++ b/#src/index.html
@@ -59,7 +59,7 @@
 									</ul>
 								</div>
 
-								<div class="hero__sidebar-bottom">
+								<div class="hero__sidebar-bottom" data-da="hero__inner, last, 1199">
 									<div class="hero__sidebar-heading">Запрос оптового прайса</div>
 									<div class="hero__sidebar-social">
 										<a class="hero__sidebar-soclink" href="#">
@@ -83,7 +83,7 @@
 											</svg>
 										</a>
 									</div>
-									<a class="hero__sidebar-phone" href="#">
+									<a class="hero__sidebar-phone" href="tel:+79553582654">
 										+ 7 (955) 358-26-54
 									</a>
 								</div>
