Main page adaptive full

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -4,7 +4,7 @@
 			<a class="header__logo" href="index.html">
 				<img class="header__logo-img" src="img/logo.png" alt="Логотип">
 			</a>
-			<div class="header__search">
+			<div class="header__search" data-da="header__menu-dropdown, last, 575">
 				<form class="header__search-form" action="search-form.php" method="POST">
 					<label class="visuallyhidden" for="search-input">Введите данные для поиска</label>
 					<input class="header__search-input" id="search-input" type="search" placeholder="Найдите свой товар в нашем каталоге...">
