Basket page full and publication-page full

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -36,22 +36,22 @@
 			<div class="footer__col footer__col--fourth">
 				<span class="footer__title">Связаться с нами</span>
 				<div class="footer__social">
-					<a class="footer__social-link" href="#">
+					<a class="footer__social-link" href="#" aria-label="Instagram">
 						<svg class="footer__social-svg" viewBox="0 0 35 35">
 							<use xlink:href="img/icons/icons.svg#instagram"></use>
 						</svg>
 					</a>
-					<a class="footer__social-link" href="#">
+					<a class="footer__social-link" href="#" aria-label="Telegram">
 						<svg class="footer__social-svg" viewBox="0 0 35 35">
 							<use xlink:href="img/icons/icons.svg#telegram"></use>
 						</svg>
 					</a>
-					<a class="footer__social-link" href="#">
+					<a class="footer__social-link" href="#" aria-label="Viber">
 						<svg class="footer__social-svg" viewBox="0 0 35 35">
 							<use xlink:href="img/icons/icons.svg#viber"></use>
 						</svg>
 					</a>
-					<a class="footer__social-link" href="#">
+					<a class="footer__social-link" href="#" aria-label="Whatsapp">
 						<svg class="footer__social-svg" viewBox="0 0 35 35">
 							<use xlink:href="img/icons/icons.svg#whatsapp"></use>
 						</svg>
