--- a/#src/index.html
+++ b/#src/index.html
@@ -26,32 +26,28 @@
 									<ul class="hero__sidebar-list">
 										<li class="hero__sidebar-item">
 											<a class="hero__link" href="#">
-												<div class="hero__link-image"
-													style="background-image: url(img/icons/icons.svg#drinks);"></div>
+												<div class="hero__link-image" style="background-image: url(img/icons/icons.svg#drinks);"></div>
 												<span class="hero__link-title">Напитки</span>
 												Сады придонья, кола, липтон
 											</a>
 										</li>
 										<li class="hero__sidebar-item">
 											<a class="hero__link" href="#">
-												<div class="hero__link-image"
-													style="background-image: url(img/icons/icons.svg#sweets);"></div>
+												<div class="hero__link-image" style="background-image: url(img/icons/icons.svg#sweets);"></div>
 												<span class="hero__link-title">Сладости</span>
 												Вафли, шоколад, маршмелоу
 											</a>
 										</li>
 										<li class="hero__sidebar-item">
 											<a class="hero__link" href="#">
-												<div class="hero__link-image"
-													style="background-image: url(img/icons/icons.svg#chips);"></div>
+												<div class="hero__link-image" style="background-image: url(img/icons/icons.svg#chips);"></div>
 												<span class="hero__link-title">Чипсы и лапша</span>
 												Чипсы, лапша
 											</a>
 										</li>
 										<li class="hero__sidebar-item">
 											<a class="hero__link" href="#">
-												<div class="hero__link-image"
-													style="background-image: url(img/icons/icons.svg#gift-boxes);"></div>
+												<div class="hero__link-image" style="background-image: url(img/icons/icons.svg#gift-boxes);"></div>
 												<span class="hero__link-title">Подарочные боксы</span>
 												Можно упаковать подарок
 											</a>
@@ -62,22 +58,22 @@
 								<div class="hero__sidebar-bottom" data-da="hero__inner, last, 1199">
 									<div class="hero__sidebar-heading">Запрос оптового прайса</div>
 									<div class="hero__sidebar-social">
-										<a class="hero__sidebar-soclink" href="#">
+										<a class="hero__sidebar-soclink" href="#" aria-label="Instagram">
 											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
 												<use xlink:href="img/icons/icons.svg#instagram"></use>
 											</svg>
 										</a>
-										<a class="hero__sidebar-soclink" href="#">
+										<a class="hero__sidebar-soclink" href="#" aria-label="Telegram">
 											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
 												<use xlink:href="img/icons/icons.svg#telegram"></use>
 											</svg>
 										</a>
-										<a class="hero__sidebar-soclink" href="#">
+										<a class="hero__sidebar-soclink" href="#" aria-label="Viber">
 											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
 												<use xlink:href="img/icons/icons.svg#viber"></use>
 											</svg>
 										</a>
-										<a class="hero__sidebar-soclink" href="#">
+										<a class="hero__sidebar-soclink" href="#" aria-label="Whatsapp">
 											<svg class="hero__sidebar-image" viewBox="0 0 35 35">
 												<use xlink:href="img/icons/icons.svg#whatsapp"></use>
 											</svg>
@@ -186,8 +182,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -229,8 +224,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -272,8 +266,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -315,8 +308,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -358,8 +350,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -405,8 +396,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -448,8 +438,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -491,8 +480,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -534,8 +522,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -577,8 +564,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -602,14 +588,13 @@
 				<div class="container">
 					<div class="discount__inner">
 						<h3 class="discount__title title-medium">Скидки на товары</h3>
-						
+
 						<!-- discount-slider -->
 						<div class="discount-slider">
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -640,8 +625,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -654,8 +638,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -686,8 +669,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -700,8 +682,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -732,8 +713,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -746,8 +726,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -778,8 +757,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -792,8 +770,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -824,8 +801,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -838,8 +814,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -870,8 +845,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -884,8 +858,7 @@
 
 							<div class="discount-slider__item">
 								<div class="card-product discount-slider__product">
-									<div class="card-product__image discount-slider__image"
-										style="background-image: url(img/products/product-1.jpg);">
+									<div class="card-product__image discount-slider__image" style="background-image: url(img/products/product-1.jpg);">
 										<label class="card-product__label">
 											<input class="card-product__label-input" type="checkbox">
 											<span class="card-product__label-heart">
@@ -916,8 +889,7 @@
 										<div class="card-product__quantity card-product__quantity--active">
 											<label class="card-product__quantity-label">
 												<span class="card-product__quantity-text">Количество</span>
-												<input class="card-product__quantity-input js-input-number" type="number"
-													placeholder="0" min="1" max="99">
+												<input class="card-product__quantity-input js-input-number" type="number" placeholder="0" min="1" max="99">
 												<span class="card-product__quantity-btn"></span>
 											</label>
 										</div>
@@ -944,7 +916,7 @@
 						<div class="home-publications__box">
 							<div class="home-publications__box-inner">
 								<div class="home-publications__image-wrapper">
-									<img class="home-publications__image" src="img/home-publications/publication-img.jpg" alt="Напиток Пеппер Зиро">
+									<img class="home-publications__image" src="img/home-publications/product.jpg" alt="Напиток Пеппер Зиро">
 								</div>
 								<div class="home-publications__info">
 									<a class="home-publications__info-date" href="#">
